@@ -22,6 +22,10 @@ ListBox::~ListBox() {
 	_options.removeListDataEventHandler(this);
 }
 
+void ListBox::addOption(ListDataItem* option) {
+	_options.addItem(option);
+}
+
 void ListBox::addOption(const char* text, const u32 value, const u16 normalTextColour, const u16 normalBackColour, const u16 selectedTextColour, const u16 selectedBackColour) {
 	_options.addItem(text, value, normalTextColour, normalBackColour, selectedTextColour, selectedBackColour);
 }
